--- a/session1/Lab1.ipynb
+++ b/session1/Lab1.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -19,7 +19,6 @@
         "id": "bMD0BJvfKgfA",
         "outputId": "03fddc85-eb49-46dc-f0ad-df0309b50559"
       },
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -52,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,7 +59,6 @@
         "id": "ceg62afOLbfy",
         "outputId": "b6082f3e-a87f-4ceb-bc56-b823f9ebae5b"
       },
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -90,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -98,7 +96,6 @@
         "id": "cDu3Tx0JMikB",
         "outputId": "6d9e54e2-7125-497d-c404-1dbd6c643007"
       },
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -167,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -175,7 +172,6 @@
         "id": "qgT4xJ42OTrV",
         "outputId": "79a0808e-64a7-4f55-92f5-995433dd6352"
       },
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -196,23 +192,6 @@
         "\n",
         "# Time: O(n)\n",
         "# Space: -"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qgT4xJ42OTrV",
-        "outputId": "79a0808e-64a7-4f55-92f5-995433dd6352"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n"
-          ]
-        }
       ]
     },
     {
@@ -234,7 +213,6 @@
         "id": "RLR7Bh6QPVwb",
         "outputId": "52bd0a47-9efa-4d0a-b350-a4aae0125e7a"
       },
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -267,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -275,7 +253,6 @@
         "id": "Z3kW8Uc7QHdq",
         "outputId": "a9b0b5a0-09be-4e3c-9fde-228ede01180e"
       },
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -306,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -314,7 +291,6 @@
         "id": "3YH0LBqoQ9Iw",
         "outputId": "6fbc0ebe-3771-46cd-fc43-30ee5c2dae04"
       },
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -391,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -399,7 +375,6 @@
         "id": "fXCXBw2oSrQe",
         "outputId": "405f7c71-e32b-43e0-ba2f-5994182bfc4c"
       },
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -423,24 +398,20 @@
         "print(second)\n",
         "\n",
         "# Time: O(n)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fXCXBw2oSrQe",
-        "outputId": "405f7c71-e32b-43e0-ba2f-5994182bfc4c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "20\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
