work on lab 2 homework

--- a/session2/lab2_questions_attempt.ipynb
+++ b/session2/lab2_questions_attempt.ipynb
@@ -10,11 +10,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bf416c07",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('rockyou.txt',\"r\",encoding=\"latin-1\") as file:\n",
+    "    lines = file.readlines()\n",
+    "    file.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17fdefde",
+   "metadata": {},
+   "source": [
+    "- Time:  O(n) - reads all lines once\n",
+    "- Space:  O(n) - stores all lines in memory\n",
+    "\n",
+    "Print first 5 lines from the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b55b286f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123456\n",
+      "\n",
+      "12345\n",
+      "\n",
+      "123456789\n",
+      "\n",
+      "password\n",
+      "\n",
+      "iloveyou\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('rockyou.txt',\"r\",encoding=\"latin-1\") as file:\n",
+    "    lines = file.readlines()\n",
+    "\n",
+    "count = 0\n",
+    "lines_to_show = 5\n",
+    "it = iter(lines)\n",
+    "while count < lines_to_show:\n",
+    "    print(next(it))\n",
+    "    count += 1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -26,11 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a3c7819a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "701664\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_a_init(passwords):\n",
+    "    total = 0\n",
+    "    for p in passwords:\n",
+    "        if p.strip().startswith('a'):\n",
+    "            total += 1\n",
+    "    return total\n",
+    "print(count_a_init(lines))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,6 +105,56 @@
    "source": [
     "2. Count how many anagram groups exist in the password list.\n",
     "   -  *Anagram:* Words that contain the same letters in a different order (e.g., `\"listen\"` and `\"silent\"`).#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4b6e813",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1377251\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_anagrams(passwords):\n",
+    "    groups = {}\n",
+    "    for password in passwords:\n",
+    "        p = ''.join(sorted(password.strip()))\n",
+    "        if p in groups:\n",
+    "            groups[p].append(password.strip())\n",
+    "        else: groups[p] = [password.strip()]\n",
+    "    \n",
+    "    count = 0\n",
+    "    for group in groups.values():\n",
+    "        if len(group) > 1:\n",
+    "            count += 1\n",
+    "    return count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8245c3eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1377251\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "number = count_anagrams(lines)\n",
+    "print(number)"
    ]
   },
   {
@@ -134,8 +250,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
