--- a/session2/lab2_questions_attempt.ipynb
+++ b/session2/lab2_questions_attempt.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bf416c07",
    "metadata": {},
    "outputs": [],
@@ -33,27 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b55b286f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "123456\n",
-      "\n",
-      "12345\n",
-      "\n",
-      "123456789\n",
-      "\n",
-      "password\n",
-      "\n",
-      "iloveyou\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('rockyou.txt',\"r\",encoding=\"latin-1\") as file:\n",
     "    lines = file.readlines()\n",
@@ -76,18 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a3c7819a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "701664\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def count_a_init(passwords):\n",
     "    total = 0\n",
@@ -112,15 +87,7 @@
    "execution_count": null,
    "id": "e4b6e813",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1377251\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def count_anagrams(passwords):\n",
     "    groups = {}\n",
@@ -138,32 +105,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "8245c3eb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1377251\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "number = count_anagrams(lines)\n",
-    "print(number)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fa73be81",
    "metadata": {},
    "source": [
     "3. Count how many passwords are palindromes.\n",
-    "   -  *Palindrome:* A word that reads the same forward and backward (e.g., `\"racecar\"`, `\"level\"`).\n"
+    "   -  *Palindrome:* A word that reads the same forward and backward (e.g., `\"racecar\"`, `\"level\"`).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96f33a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_palins(list):\n",
+    "    count = 0\n",
+    "    for line in list:\n",
+    "        word = line.strip()\n",
+    "        if word == word[::-1]:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "print(count_palins(lines))"
    ]
   },
   {
@@ -172,6 +138,48 @@
    "metadata": {},
    "source": [
     "4. Find the top 5 most frequent starting letters in the password list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "05440905",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 20\u001b[0m\n\u001b[0;32m     16\u001b[0m                 items[i],items[j] \u001b[38;5;241m=\u001b[39m items[j],items[i]\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m items[:\u001b[38;5;241m5\u001b[39m]\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28mprint\u001b[39m(frequent_starters(lines))\n",
+      "Cell \u001b[1;32mIn[25], line 5\u001b[0m, in \u001b[0;36mfrequent_starters\u001b[1;34m(lines)\u001b[0m\n\u001b[0;32m      3\u001b[0m starters \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines:\n\u001b[1;32m----> 5\u001b[0m     starting_letter \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39mstrip()[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m starting_letter \u001b[38;5;129;01min\u001b[39;00m starters:\n\u001b[0;32m      7\u001b[0m         starters[starting_letter] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "def frequent_starters(lines):\n",
+    "    \n",
+    "    starters = {}\n",
+    "    for line in lines:\n",
+    "        starting_letter = line.strip()[0]\n",
+    "        if starting_letter in starters:\n",
+    "            starters[starting_letter] += 1\n",
+    "        else:\n",
+    "            starters[starting_letter] = 1\n",
+    "\n",
+    "    items = list(starters.items())\n",
+    "\n",
+    "    for i in range(0,len(items)):\n",
+    "        for j in range(i+1,len(items)):\n",
+    "            if items[j][1] > items[i][1]:\n",
+    "                items[i],items[j] = items[j],items[i]\n",
+    "\n",
+    "    return items[:5]\n",
+    "\n",
+    "print(frequent_starters(lines))"
    ]
   },
   {
@@ -205,6 +213,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f8fa97e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_numerics(list):\n",
+    "    count = 0\n",
+    "    for item in list:\n",
+    "        if item.strip().is_numeric():\n",
+    "            count+=1\n",
+    "    return count"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f762ad81",
    "metadata": {},
@@ -214,12 +237,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aacbb1af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longest_password(list):\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "aa8f4949",
    "metadata": {},
    "source": [
     "7. Count how many passwords are exactly 8 characters long.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7d4cb1e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_8s(list):\n",
+    "    count = 0\n",
+    "    for item in list:\n",
+    "        if len(item.strip()) == 8:\n",
+    "            count += 1\n",
+    "    return count"
    ]
   },
   {
