finished lab 2 questions

--- a/session2/lab2_questions_attempt.ipynb
+++ b/session2/lab2_questions_attempt.ipynb
@@ -10,27 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "bf416c07",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 22] Invalid argument: 'https://drive.google.com/file/d/17RD_B8UGpDUFaxdqeBpPEkKM9WUHbN0C/view?usp=drive_link'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[31], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://drive.google.com/file/d/17RD_B8UGpDUFaxdqeBpPEkKM9WUHbN0C/view?usp=drive_link\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m,encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlatin-1\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      2\u001b[0m     lines \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[0;32m      3\u001b[0m     file\u001b[38;5;241m.\u001b[39mclose()\n",
-      "File \u001b[1;32mc:\\Users\\markt\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 22] Invalid argument: 'https://drive.google.com/file/d/17RD_B8UGpDUFaxdqeBpPEkKM9WUHbN0C/view?usp=drive_link'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open('https://drive.google.com/file/d/17RD_B8UGpDUFaxdqeBpPEkKM9WUHbN0C/view?usp=drive_link',\"r\",encoding=\"latin-1\") as file:\n",
-    "    lines = file.readlines()\n",
-    "    file.close()\n"
+    "with open('C:/Users/markt/OneDrive/Documents/Birkbeck/MSc Data Science/Big Data Analytics/Lab-Exercises/rockyou.txt',\"r\",encoding=\"latin-1\") as file:\n",
+    "    lines = file.readlines()\n"
    ]
   },
   {
@@ -46,14 +32,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b55b286f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123456\n",
+      "\n",
+      "12345\n",
+      "\n",
+      "123456789\n",
+      "\n",
+      "password\n",
+      "\n",
+      "iloveyou\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "with open('rockyou.txt',\"r\",encoding=\"latin-1\") as file:\n",
-    "    lines = file.readlines()\n",
-    "\n",
     "count = 0\n",
     "lines_to_show = 5\n",
     "it = iter(lines)\n",
@@ -72,10 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a3c7819a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "701664\n"
+     ]
+    }
+   ],
    "source": [
     "def count_a_init(passwords):\n",
     "    total = 0\n",
@@ -97,24 +105,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "e4b6e813",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1377251\n"
+     ]
+    }
+   ],
    "source": [
     "def count_anagrams(passwords):\n",
     "    groups = {}\n",
     "    for password in passwords:\n",
-    "        p = ''.join(sorted(password.strip()))\n",
+    "        p = ''.join(sorted(str(password).strip()))\n",
     "        if p in groups:\n",
-    "            groups[p].append(password.strip())\n",
-    "        else: groups[p] = [password.strip()]\n",
-    "    \n",
+    "            groups[p].append(str(password).strip())\n",
+    "        else: groups[p] = [str(password).strip()]\n",
+    "   \n",
     "    count = 0\n",
     "    for group in groups.values():\n",
     "        if len(group) > 1:\n",
     "            count += 1\n",
-    "    return count\n"
+    "    return count\n",
+    "\n",
+    "print(count_anagrams(lines))\n"
    ]
   },
   {
@@ -129,10 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f96f33a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13928\n"
+     ]
+    }
+   ],
    "source": [
     "def count_palins(list):\n",
     "    count = 0\n",
@@ -227,17 +253,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "f8fa97e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2346842\n"
+     ]
+    }
+   ],
    "source": [
     "def count_numerics(list):\n",
     "    count = 0\n",
     "    for item in list:\n",
-    "        if item.strip().is_numeric():\n",
+    "        if item.strip().isnumeric():\n",
     "            count+=1\n",
-    "    return count"
+    "    return count\n",
+    "\n",
+    "print(count_numerics(lines))"
    ]
   },
   {
@@ -251,13 +287,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "aacbb1af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<div align=\\\\\\\\\\\\'center\\\\\\\\\\\\' style=\\\\\\\\\\\\'font:bold 11px Verdana; width:310px\\\\\\\\\\\\'><a style=\\\\\\\\\\\\'background-color:#eeeeee;display:block;width:310px;border:solid 2px black; padding:5px\\\\\\\\\\\\' href=\\\\\\\\\\\\'http://www.musik-live.net\\\\\\\\\\\\' target=\\\\\\\\\\\\'_blank\\\\\\\\\\\\'>Playing/Tangga\n"
+     ]
+    }
+   ],
    "source": [
     "def longest_password(list):\n",
-    "    "
+    "    longest = {}\n",
+    "    longest['current_max'] = ''\n",
+    "    for item in list:\n",
+    "        if len(item.strip()) > len(longest['current_max']):\n",
+    "            longest['current_max'] = item.strip()\n",
+    "    return longest['current_max']\n",
+    "\n",
+    "print(longest_password(lines))"
    ]
   },
   {
@@ -271,17 +322,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "7d4cb1e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2966005\n"
+     ]
+    }
+   ],
    "source": [
     "def count_8s(list):\n",
     "    count = 0\n",
     "    for item in list:\n",
     "        if len(item.strip()) == 8:\n",
     "            count += 1\n",
-    "    return count"
+    "    return count\n",
+    "\n",
+    "print(count_8s(lines))"
    ]
   },
   {
@@ -294,6 +355,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "db711052",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3726774\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_lower_case(list):\n",
+    "    count = 0\n",
+    "    for item in list:\n",
+    "        if item.strip().isalpha() and item.strip().islower():\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "print(count_lower_case(lines))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7da5c5e0",
    "metadata": {},
@@ -303,11 +389,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "00acd9a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "276782\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_123(list):\n",
+    "    count = 0\n",
+    "    for item in list:\n",
+    "        if '123' in item.strip():\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "print(count_123(lines))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4fb3ab03",
    "metadata": {},
    "source": [
     "10. Calculate the average length of all passwords."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8ec0c10e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.754276706484088\n"
+     ]
+    }
+   ],
+   "source": [
+    "def avg_pw_length(list):\n",
+    "    total = 0\n",
+    "    count = 0\n",
+    "    for item in list:\n",
+    "        total += len(item.strip())\n",
+    "        count += 1\n",
+    "    if count == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return total / count\n",
+    "\n",
+    "print(avg_pw_length(lines))"
    ]
   }
  ],
